// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroSection > renders default as expected 1`] = `
<div>
  <div
    class="hero-section bg-[radial-gradient(circle_at_center,#6687FF_0%,white_100%)] flex flex-row justify-center items-center w-full min-h-[570px]"
  >
    <div
      class="hero-section__content max-w-[600px]"
    />
  </div>
</div>
`;

exports[`HeroSection > renders with optional args 1`] = `
<div>
  <div
    class="hero-section bg-[radial-gradient(circle_at_center,#6687FF_0%,white_100%)] flex flex-row justify-center items-center w-full min-h-[570px]"
  >
    <div
      class="hero-section__content max-w-[600px]"
    >
      <h1
        class="hero-section__title text-bluedot-darker text-[48px] text-center mb-4 font-serif font-extrabold leading-none"
      >
        This is the title
      </h1>
      <h2
        class="hero-section__subtitle text-bluedot-darker text-xl font-normal text-center"
      >
        This is the subtitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`HeroSection > renders with optional yield 1`] = `
<div>
  <div
    class="hero-section bg-[radial-gradient(circle_at_center,#6687FF_0%,white_100%)] flex flex-row justify-center items-center w-full min-h-[570px]"
  >
    <div
      class="hero-section__content max-w-[600px]"
    >
      <p>
        This is the yield
      </p>
    </div>
  </div>
</div>
`;
